# 3DS

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: System.cpp  System.h  main.cpp
src/app/: Application.cpp
src/arm/: arm11.cpp  arm11.h  arm9.cpp  arm9.h  armgeneric.cpp  armgeneric.h  cp15.cpp  cp15.h  mpcore_pmr.cpp  mpcore_pmr.h  thumbgeneric.cpp
src/crypto/: aes.cpp  aes.h  aes_lib.hpp  rsa.cpp  rsa.h  sha.cpp  sha.h
src/dma/: cdma.cpp  cdma.h  ndma.cpp  ndma.h
src/gpu/: gpu.cpp  gpu.h
src/i2c/: i2c.cpp  i2c.h
src/memory/: Bus.cpp  Bus.h
src/pxi/: pxi.cpp  pxi.h
src/storage/: emmc.cpp  emmc.h
src/timers/: arm9_timers.cpp  arm9_timers.h
